# radar

./: .gitignore  README.md  pyproject.toml
notebooks/: dataset.ipynb  open_file.ipynb  restapi.ipynb
scripts/: download_dmi_radar.py  run_model.py
src/radar_forcast/data/: __init__.py  download.py  open_file.py  zarr.py
src/radar_forcast/ml/data/: dataset.py
src/radar_forcast/ml/lightning_modules/: gnn.py
src/radar_forcast/ml/models/: __init__.py  gnn.py
